--- a/Makefile.smallinstall
+++ b/Makefile.smallinstall
@@ -126,7 +126,7 @@ init-mwiki-user:
 	adduser $(MWUSER)
 	ssh $(MWUSER)@localhost ssh-keygen -q 
 	sudo -i -u $(MWUSER) sh -c 'git config --global user.email "$(MWUSER)@none.none" && git config --global user.name "$(MWUSER)"'
-	# mkdir $(BTRFS)/tstmw && chown tstmw:tstmw $(BTRFS)/tstmw && ln -s /mnt/btr1/tstmw clones
+	mkdir $(BTRFS)/tstmw && chown tstmw:tstmw $(BTRFS)/tstmw && ln -s $(BTRFS)/tstmw clones
 
 
 # gitolite
